modified modal for content blocks and added new background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="icon" href="images/iconf.jpg" />
+    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
@@ -36,8 +37,8 @@
                     <h2>Front End Developer</h2>
                     <a class="btn btn-download">Download Resume</a>
                     <ul class="social">
-                        <li><a href="https://github.com/sicnarfodider"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/fredido/"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/sicnarfodider" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/fredido/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -143,8 +144,8 @@
                                     <li data-filter=".games">Games</li>
                                 </ul>
                                 <div id="projects">
-                                    <div class="project web apps">
-                                        <a class="open-project" data-toggle="modal" page="final.html" href="#project-modal"/>
+                                    <div class="project web">
+                                        <a class="open-project"  page="final.html" href="#project-modal"/>
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
@@ -157,7 +158,7 @@
                                         <img src="images/portfolio/final.png" alt="final transmission landing page">
                                     </div>
                                     <div class="project web games">
-                                        <a class="open-project" data-toggle="modal"  page="trivia.html" href="#project-modal">
+                                        <a class="open-project"   page="trivia.html" href="#project-modal">
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
@@ -170,7 +171,7 @@
                                         <img src="images/portfolio/trivia.png" alt="Trivia Fighter">
                                     </div>
                                     <div class="project web games">
-                                        <a class="open-project" href="project-1.html">
+                                        <a class="open-project"    page="memory_match.html" href="#project-modal">
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
@@ -183,7 +184,7 @@
                                         <img src="images/portfolio/mass.png" alt="">
                                     </div>
                                     <div class="project web games">
-                                        <a class="open-project" href="project-1.html">
+                                        <a class="open-project"    page="othello.html" href="#project-modal">
                                             <div class="project-overlay">
                                                 <div class="vcenter">
                                                     <div class="centrize">
