--- a/memory_match.html
+++ b/memory_match.html
@@ -6,26 +6,24 @@
         <div class="modal fade" id="project-modal">
             <div class="inline-menu-container">
                 <a id="modal-close" class="close" data-dismiss="modal"><span aria-hidden="true">BACK</span></a>
-            </div>
-            <div class="modal-dialog">
+            </div><div class="modal-dialog">
                 <div class="modal-content">
                     <header>
-                        <h1>Final Transmissions</h1>
+                        <h1>Mass Effect Memory Match</h1>
                     </header>
                     <main>
                         <div class="project-summary">
                             <div class="project-details">
-                                A ghost themed augmented reality app utilizing webRTC, AR, Geolocation, and proximity based sound.
+                                A memory match game themed from the game Mass Effect
                             </div>
                             <div class="project-tools">
                                 <h4>Technologies Used</h4>
-                                <p><strong>Languages:</strong> HTML5, CSS3, JavaScript, NodeJs </p>
-                                <p><strong>Libraries:</strong> AR.js Howler.js Pug.js </p>
+                                <p><strong>Languages:</strong> HTML5, CSS3, JavaScript, React.js </p>
                             </div>
                         </div>
                         <figure>
-                            <img src="images/portfolio/final.png" Alt="Final Transmissions Landing Page"/>
-                            <figurecaption><a href="https://github.com/unleashalicia/c10.17_ghost_stories" target="_blank"> Source Code </a> | <a href="https://finaltransmissions.com" target="_blank"> Live Version </a></figcaption>
+                            <img src="images/portfolio/mass.png" Alt="Mass Effect Memory Match Screenshot"/>
+                            <figurecaption><a href="https://github.com/sicnarfodider/react_memory_match" target="_blank"> Source Code </a> | <a href="" target="_blank"> Live Version </a></figcaption>
                         </figure>
                     </main>
                 </div>
