--- a/trivia.html
+++ b/trivia.html
@@ -9,24 +9,27 @@
             </div><div class="modal-dialog">
                 <div class="modal-content">
                     <header>
-                        <h2>Trivia Fighter</h2>
-                        <small>A fighting game with a core trivia mechanic, using WEB APIs.</small>
+                        <h1>Trivia Fighter</h1>
                     </header>
-                    <section>
-                        <div class="summary">
-                            <h4>Technologies Used</h4>
-                            <p><strong>Languages:</strong> HTML5, CSS3, JavaScript</p>
-                            <p><strong>API Used:</strong>
-                                <a href="http://www.superheroapi.com/" target="_blank"> Superhero API</a>
-                                <a href="https://opentdb.com/" target="_blank"> Open Trivia DB API</a>
-                                <a href="https://api.chucknorris.io/" target="_blank"> Chuck Norris API</a>
-                            </p>
+                    <main>
+                        <div class="project-summary">
+                            <div class="project-detail">
+                                A fighting game with a core trivia mechanic, using WEB APIs. A fruit of labor by 4 developers who love superheroes and random facts on a 2-day Hackathon.
+                            </div>
+                            <div class="project-tools">
+                                <p><strong>Languages:</strong> HTML5, CSS3, JavaScript</p>
+                                <p><strong>API Used:</strong>
+                                    <a href="http://www.superheroapi.com/" target="_blank"> Superhero API</a>
+                                    <a href="https://opentdb.com/" target="_blank"> Open Trivia DB API</a>
+                                    <a href="https://api.chucknorris.io/" target="_blank"> Chuck Norris API</a>
+                                </p>
+                            </div>
                         </div>
                         <figure>
                             <img src="images/portfolio/trivia.png" Alt="Trivia Fighter Screenshot"/>
-                            <figurecaption><a href="https://github.com/sloumdrone/c10.17hacka-thello-thon" target="_blank"> Source Code </a> | <a href="https://finaltransmissions.com" target="_blank"> Live Version </a></figcaption>
-                        </section>
-                    </figure>
+                            <figurecaption><a href="https://github.com/sloumdrone/C10.17Hackathon" target="_blank"> Source Code </a> | <a href="" target="_blank"> Live Version </a></figcaption>
+                        </figure>
+                    </main>
                 </div>
             </div>
         </div>
