--- a/othello.html
+++ b/othello.html
@@ -6,28 +6,26 @@
         <div class="modal fade" id="project-modal">
             <div class="inline-menu-container">
                 <a id="modal-close" class="close" data-dismiss="modal"><span aria-hidden="true">BACK</span></a>
-            </div>
-            <div class="modal-dialog">
+            </div><div class="modal-dialog">
                 <div class="modal-content">
                     <header>
-                        <h1>Final Transmissions</h1>
+                        <h2>Wild West-thello</h2>
                     </header>
                     <main>
                         <div class="project-summary">
                             <div class="project-details">
-                                A ghost themed augmented reality app utilizing webRTC, AR, Geolocation, and proximity based sound.
+                                Western Themed Othello/Reversi
                             </div>
                             <div class="project-tools">
                                 <h4>Technologies Used</h4>
-                                <p><strong>Languages:</strong> HTML5, CSS3, JavaScript, NodeJs </p>
-                                <p><strong>Libraries:</strong> AR.js Howler.js Pug.js </p>
+                                <p><strong>Languages:</strong> HTML5, CSS3, JavaScript</p>
                             </div>
                         </div>
                         <figure>
-                            <img src="images/portfolio/final.png" Alt="Final Transmissions Landing Page"/>
-                            <figurecaption><a href="https://github.com/unleashalicia/c10.17_ghost_stories" target="_blank"> Source Code </a> | <a href="https://finaltransmissions.com" target="_blank"> Live Version </a></figcaption>
-                        </figure>
-                    </main>
+                            <img src="images/portfolio/othello.png" Alt="Othello Screenshot"/>
+                            <figurecaption><a href="https://github.com/sicnarfodider/c10.17hacka-thello-thon" target="_blank"> Source Code </a> | <a href="" target="_blank"> Live Version </a></figcaption>
+                        </main>
+                    </figure>
                 </div>
             </div>
         </div>
